--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
-<!-- <script src="{{ url_for('static', filename='js/pictionnary.js') }}"> </script> -->
+<!-- <script src="{{ url_for('static', filename='pico/js/pictionnary.js') }}"> </script> -->
 
 
 <script text="javascript">
